--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,10 @@ h1 {
   margin: 0.67em 0;
 }
 
+h3 {
+  font-weight: 700;
+}
+
 /* Grouping content
    ========================================================================== */
 
